--- a/styles.css
+++ b/styles.css
@@ -1,170 +1,79 @@
-body {
-    background-color: #fbfbf9;
-    /* cotton */
+* {
+    background-color: #fbfbf9; /* cotton */
     padding: 0;
     margin: 0;
     font-family: 'Josefin Sans', sans-serif;
     box-sizing: border-box;
 }
 
-a {
-    text-decoration: none;
-    display: inline-block;
-    padding: 8px 8px;
-}
-
-/* check if this works, maybe redundant */
-
-a:hover {
-    background-color: #ddd;
-    color: black;
-}
-
-/* check if this works, maybe redundant */
-
-a,
-a:link,
-a:visited {
-    color: white;
-    size: 20px;
-}
-
-/* check if this works, maybe redundant */
-
-img {
-    width: 30%;
-    height: auto;
-    opacity: 1;
-}
-
-/* have not used so far */
-
-p.welcome {
-    position: fixed;
-    bottom: 31px;
-    left: 350px;
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 50px;
-}
-
-/* have not used so far */
-
-/* Landing page 
-
-.picture {
-    position: fixed;
-    bottom: 50;
-    width: 100%;
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.middle {
-    position: absolute;
-    bottom: 10px;
-    right: 630px;
-    font-family: 'Vina Sans';
-    font-size: 18px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.typewriter {
-    min-height: 30%;
-    overflow: hidden;
-    padding: 30px;
-    color: #FFFFF3;
-    font-family: 'Anonymous Pro', monospace;
-    background-color: #2D033B;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 26px;
-}
-
-.line {
-    position: relative;
-    top: 50%;
-    width: 24em;
-    margin: 0 auto;
-    border-right: 2px solid #FFFFF3;
-    font-family: 'Vina Sans';
-    font-size: 180%;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    transform: translateY(-50%);
-}
-
-.type {
-    animation: typewriter 4s steps(44) 1s 1 normal both,
-        blinkTextCursor 500ms steps(44) infinite normal;
-}
-
-@keyframes typewriter {
-    from {
-        width: 0;
-    }
-
-    to {
-        width: 24em;
-    }
-}
-
-@keyframes blinkTextCursor {
-    from {
-        border-right-color: #FFFFF3;
-    }
-
-    to {
-        border-right-color: transparent;
-    }
-}
-*/
-
 /* intro */
-/* if want to do for entire intro only eg bg pic then use * {} */
+.main {
+    height: 75vh;
+    width: 100%;
+    margin: 0 auto;
+    padding: 50px 20px;
+ }
 
-span {
-    color: #b0f2c2;
-}
-
-h1 {
+.main h1 {
     color: #0b1623;
     margin: 20px 0px 20px;
     font-size: 75px;
 }
 
-h3 {
+.main h3 {
     color: #0b1623;
-    font-size: 25px;
     margin-bottom: 50px;
 }
 
-h4 {
+.main h4 {
     color: #0b1623;
     letter-spacing: 2px;
-    font-size: 20px;
 }
+
+span {
+    color: #b0f2c2;
+}
+
+nav {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 25px;
+    z-index: 1000;
+}
+
+nav ul li {
+    list-style-type: none;
+    display: inline-block;
+    padding: 10px 25px;
+    font-size: 25px;
+}
+ 
+nav ul li a {
+    color: #0b1623;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.4s ease;
+}
+ 
+nav ul li a:hover {
+    color: #fcfc;
+    transform: scale(1.2);
+}
+ 
 
 .intro {
-    height: 100vh;
-    width: 100%;
-    background-size: cover;
-    background-position: center;
-}
-
-.main {
     position: absolute;
-    top: 50%;
-    left: 8%;
+    width: 100%;
+    align-items: center;
+	margin: 0 auto;
     transform: translateY(-50%);
+    top: 45%;
+    left: 8%;
 }
 
 .intro-socials {
@@ -174,7 +83,7 @@ h4 {
 }
 
 .intro-socials li {
-    margin: 0 10px;
+    margin: 0 20px;
 }
 
 .intro-socials a {
@@ -192,102 +101,193 @@ h4 {
     transform: scale(1.3);
 }
 
-.learn-more-button {
-    background-color: #b0f2c2;
-    color: white;
-    text-decoration: none;
-    border: 3px solid transparent;
-    font-weight: bold;
-    padding: 10px 25px;
-    border-radius: 30px;
-    transition: transform 0.4s;
+/* sidep */
+.projects {
+    padding: 50px 20px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.projects h1 {
+    color: #0b1623;
+    letter-spacing: 2px;
+    font-size: 50px;
+    position: absolute;
+    width: 100%;
+    align-items: center;
+	margin: 0 auto;
+    transform: translateY(-50%);
+    left: 8%;
+}
+
+.projects p {
+    color: #0b1623;
+    letter-spacing: 2px;
+    font-size: 50px;
+    background-color: #b0c2f2;
+}
+
+.projects p i {
+    color: #0b1623;
+    letter-spacing: 2px;
+    font-size: 18px;
+    background-color: #b0c2f2;
+}
+
+.projects h2 {
+    color: #FCFC;
+    text-shadow: 1px 1px #0b1623;
+    background-color: #b0c2f2;
+    font-size: 35px;
+    padding: 25px 0 0 0; 
+    text-align: center; 
+    max-width: 100%; 
+}
+
+.projects h4 {
+    color: #0b1623;
+    letter-spacing: 2px;
     font-size: 20px;
-    text-shadow: 4px 2px 4px #000;
+    margin: 0 auto;
+    padding: 25px 0 0 0;
+    background-color: #b0c2f2;
 }
 
-.learn-more-button:hover {
+.projects h3 {
+    color: #0b1623;
     background-color: #b0f2c2;
-    border: 3px solid;
-    cursor: pointer;
+    font-size: 30px;
+    padding: 25px 0 0 0; 
+    text-align: center; 
+    max-width: 100%; 
 }
 
-/* skills */
-h4 {
-    color: black;
-    font-size: 28px;
+.projects h5 {
+    color: #0b1623;
+    letter-spacing: 2px;
+    font-size: 15px;
+    background-color: #b0f2c2;
 }
 
-.diamond {
-    position: fixed;
-    bottom: 380px;
-    left: 600px;
-    border-radius: 25px;
-    background: white;
+.all-projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 25px;
+    padding: 80px;
+}
+
+a {
+    text-decoration: none;
+    background-color: transparent;
+    color: #0b1623;
+}
+  
+a:hover {
+    text-decoration: none;
+    background-color: transparent;
+    color: #0b1623;
+}
+
+.pro-box {
+    position: relative;
+    height: 450px;
+    perspective: 1000px;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px #888888;
+    transition: transform 0.5s, box-shadow 0.5s;
+}
+
+.front, .back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    transition: transform 0.6s;
     padding: 20px;
-    width: 200px;
-    height: 280px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.diamond:hover {
-    border: 3px solid;
-    cursor: pointer;
-    color: black;
+.front {
+    background-color: #b0c2f2;
+    transform: rotateY(0deg);
 }
 
-.club {
-    position: fixed;
-    bottom: 380px;
-    left: 850px;
-    border-radius: 25px;
-    background: white;
-    padding: 20px;
-    width: 200px;
-    height: 280px;
+.back {
+    background-color: #b0f2c2;
+    color: #fbfbf9;
+    transform: rotateY(180deg);
+    overflow-y: auto;
 }
 
-.club:hover {
-    border: 3px solid;
-    cursor: pointer;
-    color: black;
+.pro-box:hover .front {
+    transform: rotateY(-180deg);
 }
 
-.dia1 {
-    position: fixed;
-    bottom: 387px;
-    left: 743px;
-    transform: rotate(-180deg);
-    -webkit-transform: rotate(-180deg);
+.pro-box:hover .back {
+    transform: rotateY(0deg);
 }
 
-.clu1 {
-    position: fixed;
-    bottom: 387px;
-    left: 993px;
-    transform: rotate(-180deg);
-    -webkit-transform: rotate(-180deg);
+.pro-box:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 15px 30px #888888;
 }
 
-.dia2 {
-    position: fixed;
-    bottom: 585px;
-    left: 607px;
+.link {
+    display: inline-block;
+    margin-top: 15px;
+    padding: 8px 20px;
+    background-color: #fbfbf9;
+    color: #b0c2f2;;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+    transition: background-color 0.3s;
 }
 
-.clu2 {
-    position: fixed;
-    bottom: 585px;
-    left: 858px;
+.link:hover {
+    background-color: #fbfbf9;
 }
 
-/* education */
-.ubc {
-    position: fixed;
+/* eca */
+.eca {
+    padding: 40px 20px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.eca h1 {
+    color: #0b1623;
+    letter-spacing: 2px;
+    font-size: 50px;
+    position: absolute;
+    width: 100%;
+    align-items: center;
+	margin: 0 auto;
+    transform: translateY(-50%);
+    left: 8%;
+}
+
+.widspic {
+    position: relative;
+    opacity: 0.9;
+    padding: 50px 20px;
+    margin: 0 auto;
+    align-items: center;
+}
+  
+.ltspic {
+    position: absolute;
     bottom: 470px;
-    left: 525px;
+    left: 875px;
     opacity: 0.9;
 }
 
-.grow1 {
+.wids {
     padding: 5px 5px 5px 5px;
     border-radius: 10px;
     height: 60px;
@@ -302,282 +302,73 @@ h4 {
     transition: 1.5s;
     border: 3px solid;
     cursor: pointer;
-    color: black;
+    color: #0b1623;
     position: fixed;
     bottom: 370px;
     left: 480px;
-    color: white;
+    color: #b0c2f2;
 }
-
-.grow1:hover {
+  
+.wids:hover {
     height: 300px;
     width: 21%;
     background-color: #FCFC;
     opacity: 1;
-    color: black;
+    color: #0b1623;
 }
-
-/* experience */
-.one {
-    background-color: transparent;
-    width: 150px;
-    height: 150px;
-    perspective: 1000px;
-    position: absolute;
-    top: 85px;
-    left: 500px;
-}
-
-.one-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-.one:hover .one-inner {
-    transform: rotateY(180deg);
-}
-
-.one-front,
-.one-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-
-.one-front {
-    background-color: #bbb;
-    color: black;
-}
-
-.one-back {
-    background-color: #FCFC;
-    color: black;
-    text-shadow: 2px 2px white;
-    transform: rotateY(180deg);
-}
-
-.two {
-    background-color: transparent;
-    width: 150px;
-    height: 150px;
-    perspective: 1000px;
-    position: absolute;
-    top: 85px;
-    left: 710px;
-}
-
-.two-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-.two:hover .two-inner {
-    transform: rotateY(180deg);
-}
-
-.two-front,
-.two-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-
-.two-front {
-    background-color: #bbb;
-    color: black;
-}
-
-.two-back {
-    background-color: #FCFC;
-    color: black;
-    text-shadow: 2px 2px white;
-    transform: rotateY(180deg);
-}
-
-.three {
-    background-color: transparent;
-    width: 150px;
-    height: 150px;
-    perspective: 1000px;
-    position: absolute;
-    top: 85px;
-    left: 930px;
-}
-
-.three-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-.three:hover .three-inner {
-    transform: rotateY(180deg);
-}
-
-.three-front,
-.three-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-
-.three-front {
-    background-color: #bbb;
-    color: black;
-}
-
-.three-back {
-    background-color: #FCFC;
-    color: black;
-    text-shadow: 2px 2px white;
-    transform: rotateY(180deg);
-}
-
-.four {
-    background-color: transparent;
-    width: 150px;
-    height: 150px;
-    perspective: 1000px;
-    position: absolute;
-    top: 295px;
-    left: 500px;
-}
-
-.four-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-.four:hover .four-inner {
-    transform: rotateY(180deg);
-}
-
-.four-front,
-.four-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-}
-
-.four-front {
-    background-color: #bbb;
-    color: black;
-}
-
-.four-back {
-    background-color: #FCFC;
-    color: black;
-    text-shadow: 2px 2px white;
-    transform: rotateY(180deg);
-}
-
-/* sidep */
-.pro1 {
+  
+.lts {
     padding: 5px 5px 5px 5px;
     border-radius: 10px;
-    height: 250px;
-    width: 40%;
+    height: 60px;
+    width: 15%;
     margin: 5px 1% 5px 1%;
     float: left;
     position: absolute;
+    transition: height 0.5s;
+    -webkit-transition: height 0.5s;
     text-align: center;
     overflow: hidden;
     transition: 1.5s;
+    border: 3px solid;
     cursor: pointer;
+    color: #0b1623;
     position: fixed;
-    bottom: 377px;
-    left: 480px;
-    color: black;
-    background-color: white;
-    box-shadow: 5px 5px #888888;
+    bottom: 370px;
+    left: 816px;
+    color: #b0c2f2;
+}
+  
+.lts:hover {
+    height: 300px;
+    width: 21%;
+    background-color: #FCFC;
+    opacity: 1;
+    color: #0b1623;
 }
 
-.pro1:hover {
-    background-color: rgba(172, 223, 135, 1);
-    cursor: pointer;
-}
+/* Footer */
+footer{
+    width: 100vw;
+    padding-top: 40px;
+    color: #0b1623;
+    box-sizing: border-box;
+ }
 
-h2 {
-    color: #FCFC;
-    text-shadow: 1px 1px black;
-}
-
-/* contact */
-p.contacts {
-    writing-mode: vertical-rl;
-    transform: rotate(180deg);
-    position: fixed;
-    bottom: 31px;
-    left: 350px;
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 50px;
-}
-
-.social {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: black;
-    position: relative;
-}
-
-.socials {
-    list-style: none;
-    padding-top: 550px;
-    padding-left: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: black;
-    position: relative;
-}
-
-.socials li {
-    margin: 0 70px;
-}
-
-.socials a {
-    text-decoration: none;
-    color: black;
-}
-
-.socials a i {
-    font-size: 1.6rem;
-    transition: color 0.4s ease;
-}
-
-.socials a:hover i {
-    color: #acdf87;
-    transform: scale(1.3);
-}
+.footer-bottom{
+    width: 100vw;
+    padding: 20px 0;
+    text-align: center;
+ }
+ 
+ .footer-bottom p{
+    font-size: 14px;
+    word-spacing: 2px;
+    text-transform: capitalize;
+ }
+ 
+ .footer-bottom span{
+    text-transform: uppercase;
+    font-weight: 400;
+    color: #b0f2c2;
+ }
